# Cuda-Test-Lab

./: .gitignore  CMakeLists.txt  Makefile  README.md  convolution.cu  hello.cu  pyproject.toml
Convolution/: CMakeLists.txt
Convolution/src/: benchmark.cpp  convolution.cu  main.cpp  test.cpp
Convolution/src/alloc_image_mem/: alloc_image_mem.cpp  alloc_image_mem.hpp
Convolution/src/convolution/: convolution.cu  convolution.cuh  convolution.hpp  convolution_commom.cpp  convolution_commom.hpp  convolution_cpu_par.cpp  convolution_cpu_par.hpp  convolution_serial.cpp  convolution_serial.hpp  cuda_common.cuh
Thread-Pool/: CMakeLists.txt
Thread-Pool/src/: thread-pool.cpp  thread-pool.hpp
Vector-Add/: CMakeLists.txt
Vector-Add/src/: main.cpp
Vector-Add/src/alloc_vector_mem/: alloc_vector_mem.cpp  alloc_vector_mem.hpp
Vector-Add/src/vector_add/: vector_add.cu  vector_add.cuh
dashboard/: dashboard.py
data/: bench.csv  bench_2.csv  convolution_matrix_out_cpu.txt  convolution_matrix_out_gpu.txt
src/: convolution.cu
