[tool.poetry]
name = "cuda-lab"
version = "0.1.0"
description = ""
authors = ["Otávio Almeida <otavioalmeida650@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.0"
plotly = "^5.17.0"
polars = "^0.19.3"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
dash = "streamlit run dashboard/dashboard.py"
